[project]
name = "ha-printables-stats"
version = "1.0.0"
description = "Home Assistant integration for Printables Stats"
requires-python = ">=3.11"
dependencies = [
    "printables-stats>=0.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "ty>=0.0.1a33",
    "pytest",
    "homeassistant",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["custom_components.printables_stats"]
force-sort-within-sections = true
